[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mosaic-archive"
version = "0.16.0"
description = "Experimental general-purpose adaptive encrypted archive format"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mosaic Archive contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Compression",
  "Topic :: Security :: Cryptography",
]
dependencies = ["cryptography>=46.0,<50"]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "ruff>=0.12,<1",
]

[project.scripts]
msc = "mosaic_archive.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic_archive"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
